--- a/geradordesenha/index.html
+++ b/geradordesenha/index.html
@@ -16,7 +16,7 @@
    Lembre-se de guardar sua senha em um lugar seguro! ⚠️
 </p>
     <button onclick="gerarSenha()" id = "botaoGerar">Gere sua senha</button>
-    <input type="password" id="senha" readonly>
+    <input type="text" id="senha" readonly>
     <button onclick="copiarSenha()" id="botaoCopiar" style="display: none;">Copiar senha</button>
   </div>
   <script src="script.js"></script>
